# RSA-Factoring-Challenge

./: .gitignore  factors  factors.c  factors.pyx  rsa
factor/: Cargo.toml  factor  factors
factor/src/: main.rs
factor/test/: test00
rsa_/: Cargo.toml
rsa_/src/: main.rs
test/: factors  setup.py  test00
