[package]
name = "factors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
facto-rs = {git = "https://github.com/zademn/facto-rs"}
gcd = "2.3.0"
rand = "0.8.5"
rug = "1.19.2"
# concurrent_prime_sieve = "0.3.3"
# rug = "1.19.2"

[profile.release]
strip = true
